Use new messages without protobuf dependencies, and Markdown support. (#1645)
* Start refactoring the code to use the new messages from the json-schema branch.

To use those messages, first `npm link` every @cucumber/* module we depend on in the monorepo.
Then, `npm link [all the modules]` from this repo.

* Everything compiles

* Fix import of messages module

* Fix import of messages in coordinator

* Update predictableTimestamp to work with new messages

* Fix tests related to capture groups

* Fix some more tests

* Fix another spec

* All unit tests passing

* cck fixes

* Make more scenarios pass

* Fix import

* Export Status

* All features passing

* npm test is now passing

* Update @cucumber dependencies

* Add support for Markdown

* update yarn lockfile

* Fix npm dependencies

* Use .feature.md extension. Update dependencies.

Co-authored-by: aurelien-reeves <aurelien.reeves@smartbear.com>
Co-authored-by: davidgoss <david@davidgoss.co>

--- a/package.json
+++ b/package.json
@@ -168,15 +168,14 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@cucumber/create-meta": "4.0.0",
-    "@cucumber/cucumber-expressions": "12.0.1",
-    "@cucumber/gherkin": "18.0.0",
-    "@cucumber/gherkin-streams": "1.0.0",
-    "@cucumber/html-formatter": "13.0.0",
-    "@cucumber/messages": "15.0.0",
-    "@cucumber/query": "9.0.2",
-    "@cucumber/tag-expressions": "3.0.1",
-    "assertion-error-formatter": "3.0.0",
+    "@cucumber/create-meta": "^5.0.0",
+    "@cucumber/cucumber-expressions": "^12.1.1",
+    "@cucumber/gherkin": "^19.0.3",
+    "@cucumber/gherkin-streams": "^2.0.2",
+    "@cucumber/html-formatter": "^14.0.0",
+    "@cucumber/messages": "^16.0.1",
+    "@cucumber/tag-expressions": "^3.0.1",
+    "assertion-error-formatter": "^3.0.0",
     "bluebird": "^3.7.2",
     "capital-case": "^1.0.4",
     "cli-table3": "^0.6.0",
@@ -204,7 +203,9 @@
     "verror": "^1.10.0"
   },
   "devDependencies": {
-    "@cucumber/compatibility-kit": "4.0.1",
+    "@cucumber/compatibility-kit": "6.0.0",
+    "@cucumber/message-streams": "2.0.0",
+    "@cucumber/query": "10.0.0",
     "@sinonjs/fake-timers": "7.0.5",
     "@types/bluebird": "3.5.33",
     "@types/chai": "4.2.17",
@@ -244,7 +245,6 @@
     "fs-extra": "9.1.0",
     "mocha": "8.3.2",
     "mustache": "4.2.0",
-    "ndjson-parse": "1.0.4",
     "nyc": "15.1.0",
     "prettier": "2.2.1",
     "semver": "7.3.5",
